--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.25.2",
     "fontfaceobserver": "^2.3.0",
+    "googleapis": "^149.0.0",
     "gsap": "^3.12.7",
     "lenis": "^1.1.21",
+    "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
